--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>tunnellen</artifactId>
     <version>1.3-SNAPSHOT</version>
 
+    <scm>
+        <url>https://github.com/fredrik-rambris/tunnellen/</url>
+        <connection>scm:git:git@github.com:fredrik-rambris/tunnellen.git</connection>
+    </scm>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
